View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024459 | Open CASCADE | OCCT:Visualization | public | 2013-12-12 12:48 | 2013-12-19 14:00 |
Reporter | apn | Assigned To | |||
Priority | urgent | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.7.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024459: Exception during clearing object in test case v3d/raytrace/connected in DEBUG mode | ||||
Description | Exception appears during clearing object when vraytrace 0 on Windows in DEBUG mode on current master CR670-IR-master-occt-deb. Test case v3d/raytrace/connected: box b1 0 0 0 1 2 3 box b2 3 0 0 3 2 1 vinit View1 vactivate Driver1/Viewer1/View1 vactivate: the view is active already vactivate: the view is active already vclear vsetdispmode 1 vraytrace 0 vaxo vconnectsh b1c -3 0 0 1 0 0 0 0 1 b1 b2 vfit vrotate 0.2 0.0 0.0 vclear Remove b1c An exception was caught 0068052C : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xDDDDDDE1 during 'READ' operation ** Exception ** 0068052C : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xDDDDDDE1 during 'READ' operation | ||||
Tags | No tags attached. | ||||
Test case number | v3d raytrace connected | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2013-12-12 12:48 | apn | New Issue | |
2013-12-12 12:48 | apn | Assigned To | => san |
2013-12-12 12:48 | apn | Test case number | => v3d raytrace connected |
2013-12-12 12:52 | apn | Status | new => assigned |
2013-12-12 13:13 | apn | Product Version | => 6.7.0 |
2013-12-12 14:14 |
|
Assigned To | san => duv |
2013-12-12 14:15 |
|
Priority | normal => urgent |
2013-12-12 19:03 |
|
Note Added: 0027196 | |
2013-12-12 19:23 |
|
Note Added: 0027197 | |
2013-12-12 19:23 |
|
Assigned To | duv => kgv |
2013-12-12 19:23 |
|
Status | assigned => resolved |
2013-12-13 10:23 | kgv | Note Added: 0027201 | |
2013-12-13 10:23 | kgv | Assigned To | kgv => bugmaster |
2013-12-13 10:23 | kgv | Status | resolved => reviewed |
2013-12-13 14:09 |
|
Changeset attached | => occt master 6bf1bdbd |
2013-12-13 14:09 |
|
Assigned To | bugmaster => abv |
2013-12-13 14:09 |
|
Status | reviewed => verified |
2013-12-13 14:09 |
|
Resolution | open => fixed |
2013-12-13 14:10 | bugmaster | Target Version | => 6.7.0 |
2013-12-19 13:50 | bugmaster | Status | verified => closed |
2013-12-19 14:00 | bugmaster | Fixed in Version | => 6.7.0 |