0024459: Exception during clearing object in test case v3d/raytrace/connected in DEBUG mode