src/PrsMgr/PrsMgr_Presentation3d.cxx
@@ -72,6 +72,8 @@ void PrsMgr_Presentation3d::Erase ()
 {
   // Erase structure from structure manager
   myStructure->Erase();
+  // Disconnect other structures
+  myStructure->DisconnectAll (Graphic3d_TOC_DESCENDANT);
   // Clear groups and remove graphic structure
   myStructure.Nullify();
 }
